--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,13 @@
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -33,5 +35,14 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+			</plugin>
+
+		</plugins>
 	</build>
 </project>
