--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 				<version>3.10.1</version>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M6</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
