--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 				<version>3.0.0-M6</version>
 			</plugin>
 
+			<plugin>
+				<groupId>com.amashchenko.maven.plugin</groupId>
+				<artifactId>gitflow-maven-plugin</artifactId>
+				<version>1.18.0</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
