--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -25,9 +25,14 @@ jobs:
           project_version=$(mvn help:evaluate -q -Dexpression=project.version -DforceStdout=true)
           echo "Project version fetched = $project_version"
           echo "project_version=$project_version" >> $GITHUB_ENV
+          project_artifactid=$(mvn help:evaluate -q -Dexpression=project.artifactId -DforceStdout=true)
+          echo "Project artifactId fetched = project_artifactid"
+          echo "project_artifactid=project_artifactid" >> $GITHUB_ENV
 
       - name: Test var accessible in next step
-        run: echo "Project Version is ${{ env.project_version }}"
+        run: |
+          echo "Project Version is ${{ env.project_version }}"
+          echo "Project ArtifactId is ${{ env.project_artifactid }}"
 
       - name: Build Maven artifact
         id: maven_build
@@ -52,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./target/fakeSMTP-${{ env.project_version }}.jar
-          asset_name: fakeSMTP-${{ env.project_version }}.jar
+          asset_path: ./target/${{ env.project_artifactid }}-${{ env.project_version }}.jar
+          asset_name: ${{ env.project_artifactid }}-${{ env.project_version }}.jar
           asset_content_type: application/octet-stream
