--- a/.github/workflows/docker-build-multi-platform-simulation.yml
+++ b/.github/workflows/docker-build-multi-platform-simulation.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./Dockerfile
+          file: {context}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: user/app:latest
