--- a/.github/workflows/docker-build-multi-platform.yml
+++ b/.github/workflows/docker-build-multi-platform.yml
@@ -1,8 +1,8 @@
+name: Docker Build Multi Platform
+
 # See :
 # - https://github.com/docker/build-push-action/blob/master/docs/advanced/multi-platform.md
 # - https://docs.docker.com/build/building/multi-platform/
-
-name: Docker Build Multi Platform
 
 on:
   workflow_dispatch:
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: {context}/Dockerfile
+          file: "{context}/Dockerfile"
           platforms: linux/amd64,linux/arm64
           push: true
           tags: user/app:latest
