--- a/.github/workflows/docker-build-multi-platform.yml
+++ b/.github/workflows/docker-build-multi-platform.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: "{context}/Dockerfile"
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: user/app:latest
