--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -3,12 +3,10 @@ name: Docker Metadata on Tags
 
 # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_dispatch
 on:
-  workflow_dispatch:
-    inputs:
-      tag_input:
-        description: 'Test scenario tag value'
-        required: true
-        type: string
+  tags:
+    - '**'
+  branches-ignore:
+    - '**'
 
 jobs:
   docker-metadata:
@@ -26,9 +24,10 @@ jobs:
           images: ghusta/myapp
           tags: |
             type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
       - name: Next
         run: |
-          echo Input tag is ${{ inputs.tag_input }}
+          echo Git ref is ${{ github.ref }}
           echo Metadata tags = ${{ steps.meta.outputs.tags }}
           echo Metadata labels = ${{ steps.meta.outputs.labels }}
