--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           images: ghusta/myapp
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            'type=semver,pattern={{version}}'
+            'type=semver,pattern={{major}}.{{minor}}'
 
       - name: Next
         run: |
