[GitHub Actions] Workflow : \"Docker Metadata on Tags\" : Format output
See : https://docs.github.com/en/actions/learn-github-actions/expressions#join

--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Next
         run: |
           echo Git ref is ${{ github.ref }}
-          echo Metadata tags = ${{ steps.meta.outputs.tags }}
+          echo Metadata tags = ${{ join(steps.meta.outputs.tags, ', ') }}
           echo Metadata labels = ${{ steps.meta.outputs.labels }}
