--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -22,8 +22,10 @@ jobs:
         with:
           images: ghusta/myapp
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            # like semver
+            type=match,pattern=\d.\d.\d
+            # not like semver
+            type=match,pattern=\d.\d
 
       - name: Next
         run: |
