--- a/.github/workflows/check-regex-on-tag.yml
+++ b/.github/workflows/check-regex-on-tag.yml
@@ -3,8 +3,8 @@ name: Check Tag name with Regex
 on:
   push:
     tags:
-      - ^([1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$
-      - ^([1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-alpine)?$
+      - '([1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)'
+      - '([1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-alpine)?'
 
 jobs:
   check-tag-name:
