--- a/.github/workflows/check-regex-on-tag.yml
+++ b/.github/workflows/check-regex-on-tag.yml
@@ -3,10 +3,25 @@ name: Check Tag name with Regex
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - '**'
 
 jobs:
   check-tag-name:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Tag name is OK"
+      - name: Should comply with SemVer
+        id: check-tag
+        run: |
+          if [[ ${{ github.ref_name }} =~ ^([1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(-alpine)?$ ]]; then
+            echo "Tag name comply with SemVer (basic check) -- See https://semver.org/"
+            echo ::set-output name=match::true
+            true
+          else
+            echo ::set-output name=match::false
+            false
+          fi
+
+      - name: Build
+        if: steps.check-tag.outputs.match == 'true'
+        run: |
+          echo "Tag is a match"
