[GitHub Actions] Workflow : "Docker Metadata on Tags" : display github.ref_name

--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Next
         run: |
           echo Git ref is ${{ github.ref }}
+          echo Git ref name is ${{ github.ref_name }}
           echo Metadata tags = ${{ join(steps.meta.outputs.tags) }}
           echo Metadata labels = ${{ steps.meta.outputs.labels }}
