Expression : use join on labels

--- a/.github/workflows/docker-metadata-on-tag.yml
+++ b/.github/workflows/docker-metadata-on-tag.yml
@@ -32,4 +32,4 @@ jobs:
           echo Git ref is ${{ github.ref }}
           echo Git ref name is ${{ github.ref_name }}
           echo Metadata tags = ${{ join(fromJSON(steps.meta.outputs.json).tags, ',') }}
-          echo Metadata labels = ${{ steps.meta.outputs.labels }}
+          echo Metadata labels = ${{ join(fromJSON(steps.meta.outputs.json).labels, ', ') }}
