--- a/.github/workflows/docker-metadata-suffix-on-tag.yml
+++ b/.github/workflows/docker-metadata-suffix-on-tag.yml
@@ -23,11 +23,30 @@ jobs:
           images: ghusta/myapp
           sep-tags: ','
           sep-labels: ', '
+          flavor: |
+            latest=true
           tags: |
             # semver-only tags
             type=semver,pattern={{version}}
             type=semver,pattern={{version}},suffix=-test
             type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}},suffix=-test
+
+      - name: Docker meta no latest
+        id: meta-no-latest
+        uses: docker/metadata-action@v4
+        with:
+          images: ghusta/myapp
+          sep-tags: ','
+          sep-labels: ', '
+          flavor: |
+            latest=false
+          tags: |
+            # semver-only tags
+            type=semver,pattern={{version}}
+            type=semver,pattern={{version}},suffix=-fake
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}},suffix=-fake
 
       - name: Next
         run: |
@@ -35,3 +54,9 @@ jobs:
           echo Git ref name is ${{ github.ref_name }}
           echo Metadata tags = ${{ steps.meta.outputs.tags }}
           echo Metadata labels = ${{ steps.meta.outputs.labels }}
+
+      - name: Next with no latest
+        run: |
+          echo Git ref is ${{ github.ref }}
+          echo Git ref name is ${{ github.ref_name }}
+          echo Metadata tags = ${{ steps.meta-no-latest.outputs.tags }}
